# wasm_emscripten_try

./: .gitignore  CMakeLists.txt  LICENSE  build_em.sh
src/cpp/: hello.wasm  hello_function.cpp  hello_world.c  main_loop.c  test_function.c
src/cpp/OpenGL_Test/: openglTest.cpp
src/cpp/OpenGL_Test/glad/include/glad/: glad.h
src/cpp/OpenGL_Test/glad/src/: glad.c
src/js/: test_function_lib.js
